# pokedex

./: README.md  pyproject.toml
src/pokedex/: pokedex.py
